--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant le Normand</title>
-    <link rel="shortcut icon" href="https://i.ibb.co/vwYgn5v/Tree.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.imgur.com/QXIwdB7.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
