--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body style="font-family: 'Rosario', sans-serif;" class="text-olive-600">
+  <body style="font-family: 'Rosario', sans-serif;" class="text-olive-600 bg-olive-50">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
